Update team, profile, club, and match templates and views

--- a/templates/authentication/email_template/activation_email.html
+++ b/templates/authentication/email_template/activation_email.html
@@ -6,11 +6,11 @@
 <body>
     <h2>Activate Your Account</h2>
     <p>Hello {{ user.username }},</p>
-    <p>Click the link below to activate your account:</p>
+    <p>klik op de link hieronder om je account te actieveren</p>
     <a href="{{ activation_url }}">
-        Activate Account
+        actieveer Account
     </a>
-    <p>If you didn't request this, please ignore this email.</p>
-    <p>Best regards,<br><a href="Butrosgroot.com">Butrosgroot.com</a> Team</p>
+    <p>Als je dit niet hebt aangevraagd, negeer deze email dan.</p> 
+    <p>Vriendelijke groeten,<br><a href="Butrosgroot.com">Butrosgroot.com</a> Team</p>
 </body>
 </html>
