--- a/static_workfile/css/teams/index.css
+++ b/static_workfile/css/teams/index.css
@@ -89,8 +89,9 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     height: 156px;
+    margin: 8px 0;
 }
 
 .player-profile-pic {
@@ -101,6 +102,7 @@ a {
 
 .player-name {
     margin: 8px;
+    word-break: break-all;
 }
 
 .lds-ring {
@@ -334,8 +336,8 @@ a {
 
 .icon-container {
     position: absolute;
-    left: 8px;
-    top: 58px;
+    right: 46px;
+    top: 64px;
     width: auto; /* use auto to fit the width of the SVG */
     height: 32px; /* height of the volgen-icon */
     cursor: pointer;
@@ -364,8 +366,8 @@ a {
     height: 32px;
     width: auto;
     position: absolute;
-    right: 8px;
-    top: 58px;
+    right: 48px;
+    top: 64px;
 }
 
 .logout-button {
