--- a/templates/teams/detail.html
+++ b/templates/teams/detail.html
@@ -17,9 +17,10 @@
         {% include 'overlays/navbar.html' %}
 
         <div class="flex-column" style="margin-top: 48px;">
-            <div class="flex-column" style="height: 212px; background: lightgray; justify-content: flex-end; width: 100%;">
-                <div class="flex-row" style="background-color: rgba(0, 0, 0, 0.3); width: 100%; height: 48px; justify-content: center">
-                    <p style="font-weight: 600; ">{{ team }}</p>
+            <div class="flex-column" style="justify-content: flex-end; background-color: #1b1b1b; width: 100%;">
+                <div class="flex-row" style="width: calc(100% - 32px); height: 64px; justify-content: flex-start; margin: 0 16px;">
+                    <a href="/club/{{ team.club.id_uuid }}"><img alt="club-logo" src="{{ team.club.logo.url }}" style="height: 48px; width: 48px;"></a>
+                    <p style="font-weight: 600; color: white; margin-left: 12px;">{{ team }}</p>
                 </div>
                 <div class="icon-container" data-followed="{% if following %}true{% else %}false{% endif %}">
                     <img id="follow-full" src="{% static '/images/heart-full.svg' %}" alt="volgen" class="volgen-icon">
@@ -38,7 +39,7 @@
                     <a class="button" data="spelers">Spelers</a>
                 </div>
             </div>
-            <div id="info-container" style="height: calc((var(--vh, 1vh) * 100) - (301.5px + 64px)); width: 100%; overflow-y: scroll;">
+            <div id="info-container" style="height: calc((var(--vh, 1vh) * 100) - 218.5px); width: 100%; overflow-y: scroll;">
 
             </div>
         </div>
