--- a/static_workfile/css/overlays/navbar.css
+++ b/static_workfile/css/overlays/navbar.css
@@ -26,7 +26,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center
+    justify-content: center;
 }
 
 .stickyBottomNav a {
@@ -60,7 +60,7 @@
     height: 48px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .stickyTopNav img {
