--- a/templates/matches/tracker.html
+++ b/templates/matches/tracker.html
@@ -22,7 +22,7 @@
                     <button id="end-half-button" class="switch-button" style="background: red; display: none;">einde</button>
                 </div>
                 <div style="width: calc(100% * 1/3)" class="flex-column">
-                    <p style="font-size: 12px; margin: 0;">Perioide {{ match.current_part }}/{{ match.parts }}</p>
+                    <p style="font-size: 12px; margin: 0;">Perioide <span id="periode_number">{{ match.current_part }}</span>/{{ match.parts }}</p>
                     <p id="counter" style="font-size: 16px; font-weight: 600; margin: 0;">{{ time_display }}</p>
                 </div>
                 <div style="width: calc(100% * 1/3)" class="flex-column">
