Add PWA manifest and service worker

--- a/templates/club/detail.html
+++ b/templates/club/detail.html
@@ -12,6 +12,9 @@
         <link rel="stylesheet" href="/static/css/color/color.css">
         
         <link rel="icon" href="/static/images/logo/KWT_logo.png" type="image/x-icon">
+
+        <link rel="manifest" href="/static/json/manifest.json">
+        <script src="/static/js/pwa/service-worker.js"></script>
     </head>
     <body>
         {% include 'overlays/navbar.html' %}
