--- a/templates/authentication/enter_2fa_code.html
+++ b/templates/authentication/enter_2fa_code.html
@@ -13,6 +13,9 @@
 
         <link rel="stylesheet" href="https://use.typekit.net/pbm5dyg.css">
         <link rel="icon" href="/static/images/logo/KWT_logo.png" type="image/x-icon">
+
+        <link rel="manifest" href="/static/json/manifest.json">
+        <script src="/static/js/pwa/service-worker.js"></script>
     </head>
     <body class="background-color">
         {% include 'overlays/navbar.html' %}
