--- a/templates/overlays/navbar.html
+++ b/templates/overlays/navbar.html
@@ -30,3 +30,10 @@
         {% endif %}
     </ul>
 </div>
+
+<script>
+    if (window.matchMedia('(display-mode: standalone)').matches) {
+        document.querySelector('.stickyBottomNav').style.paddingBottom = '20px';
+    }
+</script>
+    
