--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
+{% load static %}
+{% load custom_tags %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -17,12 +20,49 @@
     <body>
         {% include 'overlays/navbar.html' %}
 
-        {% if user.is_authenticated %}
-        {% else %}
-        <div class="flex-column" style="margin-top: 48px;">
-            <a href="{% url 'login' %}" class="login_button flex-center">Login</a>
-        </div>
-        {% endif %}
+        <div class="flex-column" style="margin-top: 48px; width: 100%">
+            <div class="flex-column" style="padding: 0 12px 0 12px; border-bottom: 1px solid #000000b3; width: calc(100% - 24px);">
+                {% if user.is_authenticated %}
+                <p style="margin: 0; font-size: 14px; margin-top: 6px; margin-right: auto;">Volgende wedstrijd</p>
+                <p style="margin: 0; font-size: 12px; color: gray; margin-right: auto;">{{ match_date }}</p>
 
+                <div class="flex-column" style="height: 156px; justify-content: center">
+                    <a href="{% url 'match_detail' match_id=match.id_uuid %}" class="flex-row" style="justify-content: space-around; margin-top: 12px;">
+                        <div class="flex-column" style="width: 128px;">
+                            <img alt="club_logo" src="{{ match.home_team.club.logo.url }}" style="height: 56px; width: 56px;">
+                            <p style="margin: 0; font-size: 12px; margin-top: 6px;">{{ match.home_team|truncate_middle:16 }}</p>
+                        </div>
+
+                        {% if match.active %}
+                        <div class="flex-row" style="margin-top: -26px">
+                            <p id="counter" style="margin: 0;">(timer)</p>
+                            <p style="margin: 0;">{{ match.home_score }} / {{ match.away_score }}</p>
+                        </div>
+                        {% else %}
+                        <div class="flex-column" style="margin-top: -26px">
+                            <p style="font-weight: 600;">{{ match_time }}</p>
+                        </div>
+                        {% endif %}
+
+                        <div class="flex-column" style="width: 128px;">
+                            <img alt="club_logo" src="{{ match.away_team.club.logo.url }}" style="height: 56px; width: 56px;">
+                            <p style="margin: 0; font-size: 12px; margin-top: 6px;">{{ match.away_team|truncate_middle:16 }}</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="flex-center" style="border-top: 1px solid #0000004a; width: 100%">
+                    <p style="font-size: 12px; font-weight: 600; margin: 8px 0">Volledig programma</p>
+                    <img alt="arrow" src="/static/images/arrow.svg" style="height: 12px; width: 12px; margin-left: 6px; transform: rotate(-90deg);">
+                </div>
+                {% else %}
+                    <a href="{% url 'login' %}" class="login_button flex-center">Login</a>
+                {% endif %}
+            </div>
+
+            <div class="flex-column" style="margin-top: 12px; padding: 0 12px 0 12px; width: calc(100% - 24px);">
+                <p style="margin: 0; font-size: 14px; font-weight: 600; margin-top: 6px; margin-right: auto;">Updates</p>
+            </div>
+        </div>
     </body>
 </html>
