--- a/templates/matches/tracker.html
+++ b/templates/matches/tracker.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load custom_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -35,13 +36,13 @@
 
             <div style="margin: 0 24px; width: calc(100% - 48px)" class="flex-row">
                 <div id="{{ team_1.id_uuid }}" class="flex-column" style="width: 50%">
-                    <p style="margin: 0;">{{ team_1 }}</p>
+                    <p style="margin: 0;">{{ team_1|truncate_middle:14 }}</p>
                     <div id="home-score" style="background: #43ff6480; border-radius: 4px 0 0 4px; width: 100%; height: 46px;" class="flex-center">
                         <p style="margin: 0; padding: 0; font-size: 24px;">{{ team_1_score }}</p>
                     </div>
                 </div>
                 <div id="{{ team_2.id_uuid }}" class="flex-column" style="width: 50%">
-                    <p style="margin: 0;">{{ team_2 }}</p>
+                    <p style="margin: 0;">{{ team_2|truncate_middle:14 }}</p>
                     <div id="away-score" style="background: rgba(235, 0, 0, 0.5); border-radius: 0 4px 4px 0; width: 100%; height: 46px;" class="flex-center">
                         <p style="margin: 0; padding: 0; font-size: 24px;">{{ team_2_score }}</p>
                     </div>
