--- a/templates/matches/detail.html
+++ b/templates/matches/detail.html
@@ -57,6 +57,9 @@
                     <a class="button active" data="match_events">Events</a>
                     <a class="button" data="home_team">{{ match.home_team|truncate_middle:12 }}</a>
                     <a class="button" data="away_team">{{ match.away_team|truncate_middle:12 }}</a>
+                    {% if match.finished %}
+                    <a class="button" data="get_stats">statastieken</a>
+                    {% endif %}
                 </div>
             </div>
             <div id="info-container" style="height: calc((var(--vh, 1vh) * 100) - 311.5px); width: 100%; overflow-y: scroll;">
