--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -57,7 +57,7 @@
                             <input type="submit" class="CHK2-button" name="Create User" value="Maak account">
                         </form>    
     
-                        <p class="CHK2-P">{{form.errors}}</p>
+                        <p class="CHK2-P" style="color: white;">{{form.errors}}</p>
     
                         <p class="CHK2-P">Heb je al een account? <a href="{% url 'login' %}" style="color: #24A0ED; margin-left: 12px;">login</a></p>
                     </div>
