--- a/static_workfile/css/teams/index.css
+++ b/static_workfile/css/teams/index.css
@@ -98,6 +98,7 @@ a {
     width: 96px;
     height: 96px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 .player-name {
@@ -307,6 +308,7 @@ a {
     height: 100%;
     border-radius: 50%;
     display: block;
+    object-fit: cover;
 }
 
 .overlay {
