--- a/templates/club/detail.html
+++ b/templates/club/detail.html
@@ -22,7 +22,7 @@
         <div class="flex-column" style="margin-top: 48px;">
             <div class="flex-column" style="background: #1b1b1b; justify-content: flex-end; width: 100%;">
                 <div class="flex-row" style="width: calc(100% - 32px); height: 64px; justify-content: flex-start; margin: 0 16px;">
-                    <img alt="club-logo" src="{{ club.logo.url }}" style="height: 48px; width: 48px;"></a>
+                    <img alt="club-logo" src="{{ club.logo.url }}" style="height: 48px; width: 48px; object-fit: contain;"></a>
                     <p style="font-weight: 600; color: white; margin-left: 12px;">{{ club.name }}</p>
                 </div>
                 <div class="icon-container" data-followed="{% if following %}true{% else %}false{% endif %}">
