--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -15,6 +15,8 @@
 
         <link rel="manifest" href="/static/json/manifest.json">
         <script src="/static/js/pwa/service-worker.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/heic2any@0.0.3/dist/heic2any.min.js"></script>
     </head>
     <body>
         {% include 'overlays/navbar.html' %}
