--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -43,7 +43,7 @@
                     {% endif %}
                 </div>
             </div>
-            <div id="info-container" style="height: calc((var(--vh, 1vh) * 100) - (290.5px + 49px)); width: 100%; overflow-y: scroll;">
+            <div id="info-container" style="height: calc((var(--vh, 1vh) * 100) - 339.5px); width: 100%; overflow-y: scroll;">
 
             </div>
         </div>
