# Bugfix - Fixed a error when uploading a new picture it din't auto switch without reload

--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -24,7 +24,7 @@
         <div class="flex-column" style="margin-top: 64px;">
             <div class="flex-column" style="height: 170px; justify-content: center; width: 100%;">
                 <div id="profilePic-container" class="profile-container">
-                    <img src="{{ player.profile_picture.url }}" alt="profile picture" class="profile-pic">
+                    <img src="{{ player.profile_picture.url }}" alt="profile picture" class="profile-pic" id="profilePic">
                     <div id="overlay" class="overlay">
                         <img src="/static/images/player/edit-button-svgrepo-com.svg" alt="Overlay Icon" class="overlay-icon">
                     </div>
