# Bugfix - Fixed a bug with the total goals_for and against in team stats - Fixed a bug with scrol range on the search page

--- a/templates/teams/index.html
+++ b/templates/teams/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
 
-            <div class="teams-container" style="margin-top: 16px; padding-bottom: 8px;">
+            <div id="info-container" class="teams-container" style="margin-top: 16px; padding-bottom: 8px; height: calc((var(--vh, 1vh) * 100) - 184px);">
                 {% if teams %}
                 <h2 style="margin: 0; font-size: 16px;">Aangesloten</h2>
                 {% endif %}
