# Update - Added a scroll lock to the body

--- a/templates/overlays/navbar.html
+++ b/templates/overlays/navbar.html
@@ -36,6 +36,8 @@
         document.querySelector('.stickyBottomNav').style.paddingBottom = '20px';
 
         window.addEventListener("DOMContentLoaded", function() {
+            document.body.style.overflow = 'hidden';
+
             let infoHeightContainer = document.getElementById('info-container').style.height
     
             console.log(infoHeightContainer)
