# Bugfix Fix profile picture click event

--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -60,9 +60,11 @@
             </div>
             <script>
                 const profilePic = document.getElementById('overlay');
-                console.log(profilePic);
                 profilePic.onclick = function() {
-                    document.getElementById('profilePicInput').click();
+                    // check if profilePic-container has the class active-img
+                    if (document.getElementById("profilePic-container").classList.contains("active-img")) {
+                        document.getElementById('profilePicInput').click();
+                    }
                 };
             </script>
         {% endif %}
