Add loading spinner animation to detail pages

--- a/templates/overlays/navbar.html
+++ b/templates/overlays/navbar.html
@@ -36,8 +36,6 @@
         document.querySelector('.stickyBottomNav').style.paddingBottom = '20px';
 
         window.addEventListener("DOMContentLoaded", function() {
-            document.body.style.overflow = 'hidden';
-
             let infoHeightContainer = document.getElementById('info-container').style.height
     
             console.log(infoHeightContainer)
@@ -59,5 +57,9 @@
             console.log(document.getElementById('info-container').style.height)
         });
     }
+
+    window.addEventListener("DOMContentLoaded", function() {
+        document.body.style.overflow = 'hidden';
+    });
 </script>
     
