--- a/static_workfile/css/teams/index.css
+++ b/static_workfile/css/teams/index.css
@@ -505,3 +505,23 @@ option {
     font-size: 14px;
     font-weight: 300;
 }
+
+.selection-button {
+    border: 2px solid var(--button-color);
+    border-radius: 4px;
+    padding: 4px 8px;
+    font-size: 16px;
+    font-weight: 300;
+
+    width: calc(50% - 24px);
+    height: 32px;
+
+    cursor: pointer;
+
+    transition: background-color 0.3s ease;
+}
+
+.active {
+    background-color: var(--button-color);
+    color: white;
+}
