--- a/static_workfile/css/teams/index.css
+++ b/static_workfile/css/teams/index.css
@@ -441,18 +441,19 @@ a {
 
 .team-button {
     width: 100%; 
-    min-height: 156px; 
-    background: #D9D9D9; 
-    border-radius: 4px; 
-    justify-content: flex-end;
+    min-height: 96px;
+
+    border-top: 1px solid #D9D9D9;
+
+    justify-content: space-around
 }
 
 .team-container {
-    background-color: rgba(0, 0, 0, 0.3);
-    width: 100%;
+    width: calc(100% - 124px);
     border-radius: 0 0 4px 4px;
-    height: 48px;
-    justify-content: center
+    height: 100%;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .past-request {
@@ -524,4 +525,11 @@ option {
 .active {
     background-color: var(--button-color);
     color: white;
+}
+
+.team-logo {
+    width: 64px;
+    height: auto;
+    object-fit: cover;
+    border-radius: 50%;
 }
