# Update - Added the counter to the match detail page

--- a/templates/matches/detail.html
+++ b/templates/matches/detail.html
@@ -38,7 +38,7 @@
                             {% if match.active %}
                                 <p id="counter" style="margin: 0; font-size: 20px; font-weight: 600;">{{ time_display }}</p>
                             {% else %}
-                                <p style="margin: 0; font-size: 20px; font-weight: 600;">{{ start_time }}</p>
+                                <p id="counter" style="margin: 0; font-size: 20px; font-weight: 600;">{{ start_time }}</p>
                             {% endif %}
                         {% endif %}
 
