# Update - Added last events display on the tracker page - Added a event update trigger when a new event happends on the match detail page

--- a/templates/matches/detail.html
+++ b/templates/matches/detail.html
@@ -42,7 +42,7 @@
                             {% endif %}
                         {% endif %}
 
-                        <p style="margin: 0;">{{ home_score }} / {{ away_score }}</p>
+                        <p id="score" style="margin: 0;">{{ home_score }} / {{ away_score }}</p>
                     </div>
 
                     <a href="{{ match.away_team.get_absolute_url }}" class="flex-column" style="justify-content: flex-start; text-decorator: none; color: black;">
