--- a/static_workfile/css/matches/tracker.css
+++ b/static_workfile/css/matches/tracker.css
@@ -137,3 +137,24 @@ a {
       transform: rotate(360deg);
     }
 }
+
+.event-type {
+    font-size: 14px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    height: 100%;
+    width: 64px;
+    padding: 0 10px;
+}
+
+.description {
+    margin: 0;
+    font-size: 12px;
+}
+
+.current-score {
+    margin-right: 10px;
+}
