--- a/templates/matches/tracker.html
+++ b/templates/matches/tracker.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
 
-            <div id="match-event" style="margin-top: 24px; height: 64px; width: 100%; background: lightgray;">
+            <div id="match-event" class="flex-row" style="margin-top: 24px; height: 64px; width: 100%; background: lightgray;">
 
             </div>
             
