--- a/templates/matches/detail.html
+++ b/templates/matches/detail.html
@@ -57,7 +57,7 @@
                     <a class="button active" data="match_events">Events</a>
                     <a class="button" data="home_team">{{ match.home_team|truncate_middle:12 }}</a>
                     <a class="button" data="away_team">{{ match.away_team|truncate_middle:12 }}</a>
-                    {% if match.finished %}
+                    {% if match.finished or match.active %}
                     <a class="button" data="get_stats">statastieken</a>
                     {% endif %}
                 </div>
