--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1,136 +1,105 @@
-{% load static %}
-
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Login</title>
-        <meta name="description" content="Registration">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        
-        <link rel="stylesheet" href="/static/css/authentication/login_registration.css">
-        <link rel="stylesheet" href="/static/css/color/color.css">
+<html lang="nl">
+<head>
+    <meta charset="utf-8">
+    <title>Login</title>
+    <meta name="description" content="Login pagina voor korfbal wedstrijd tracker">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <link rel="stylesheet" href="/static/css/authentication/login_registration.css">
+    <link rel="stylesheet" href="/static/css/color/color.css">
+    <link rel="stylesheet" href="https://use.typekit.net/pbm5dyg.css">
 
-        <link rel="stylesheet" href="https://use.typekit.net/pbm5dyg.css">
-        <link rel="icon" href="/static/images/logo/KWT_logo.png" type="image/x-icon">
+    <link rel="icon" href="/static/images/logo/KWT_logo.png" type="image/x-icon">
 
-        <link rel="manifest" href="/static/json/manifest.json">
-        <script src="/static/js/pwa/service-worker.js"></script>
-    </head>
-    <body class="background-color">
-        {% if device.is_mobile %}
-        {% include 'overlays/navbar.html' %}
+    <link rel="manifest" href="/static/json/manifest.json">
+    <script src="/static/js/pwa/service-worker.js"></script>
+</head>
+<body class="background-color">
+    {% include 'overlays/navbar.html' %}
 
-            <div class="CHK2">
-                <div class="CHK2-row">
-                    <div class="CHK2-text" style="flex-basis: calc(100% - 24px);">
-                        <div class="flex-row" style="justify-content: center; margin-bottom: 24px;">
-                            <img src="/static/images/logo/KWT_logo.png" alt="logo" style="width: 96px; height: 100%; border-radius: 360px;">
-                        </div>
-                        
-                        <div class="flex-column" style="margin-bottom: 32px;">
-                            <h1 class="CHK2-H" style="margin: 0;">Welkom terug!</h1>
-                            <div>
-                                <p class="CHK2-P" style="color: lightgray;">Bij de Korfbal wedstrijd tracker</p>
-                            </div>
-                        </div>
-    
-                        <form method="post" action="">
-                            {% csrf_token %}
-                            <input type="hidden" name="next" value="{{ request.GET.next|default:'teams' }}">
-    
-                            <div class="flex-column">
-                                <input type="text" id="username" name="username" placeholder="Username or email..." class="CHK2-text-input" value="{{ username }}">
-                            </div>
-    
-                            <div class="flex-column">
-                                <input type="password" id="password" name="password" placeholder="Password..." class="CHK2-text-input" >
-
-                                <div class="flex-row">
-                                    <div class="flex-row" style="justify-content: flex-start; width: 156px;">
-                                        <input type="checkbox" id="remember" name="remember" class="CHK2-checkbox" style="width: 16px; margin: 6px;">
-                                        <label for="remember" class="CHK2-P" style="margin: auto;">Onthoud me</label>
-                                    </div>
-                                    <a class="CHK2-P" style="color: #24A0ED; margin-right: 6px;" href="/password_reset/">Recover Password</a>
-                                </div>
-                            </div>
-    
-                            <input type="submit" class="CHK2-button" name="Login" value="Login">
-                        </form>
-    
-                        {% for message in messages %}
-                            <p class="CHK2-P"  style="color: white;">{{ message }}</p>
-                        {% endfor %}
-    
-                        {{form.errors}}
-                        {% if error_message %}
-                            <p class="CHK2-P"  style="color: white;">{{ error_message|safe }}</p>
-                        {% endif %}
-    
-                        <p class="CHK2-P">Heb je nog geen account maak er een? <a href="{% url 'register' %}" style="color: #24A0ED; margin-left: 12px;">Registreer</a></p>
-                        
+    <div class="CHK2">
+        <div class="CHK2-row">
+            <div class="CHK2-text" style="flex-basis: {% if device.is_mobile %}calc(100% - 24px){% else %}456px{% endif %};">
+                <div class="flex-row" style="justify-content: center; margin-bottom: 24px;">
+                    <img src="/static/images/logo/KWT_logo.png" alt="logo" style="width: 96px; height: auto; border-radius: 90px;">
+                </div>
+                
+                <div class="flex-column" style="margin-bottom: 32px;">
+                    <h1 class="CHK2-H" style="margin: 0;">Welkom terug!</h1>
+                    <div>
+                        <p class="CHK2-P" style="color: lightgray;">login voor KWT</p>
                     </div>
                 </div>
-            </div>
 
-        {% else %}
-        {% include 'overlays/navbar.html' %}
-        
-        <div class="CHK2">
-            <div class="CHK2-row">
-                <div class="CHK2-text" style="flex-basis: 456px;">
-                    <div class="flex-row" style="justify-content: center; margin-bottom: 24px;">
-                        <img src="/static/images/icon/BJG.png" alt="logo" style="width: 96px; height: 100%; border-radius: 360px;">
-                    </div>
-                    
-                    <div class="flex-column" style="margin-bottom: 32px;">
-                        <h1 class="CHK2-H" style="margin: 0;">Hello again!</h1>
-                        <div>
-                            <p class="CHK2-P" style="color: lightgray;">A program portal for BJG Groot Software</p>
+                <form method="post" action="" style="width: 100%;">
+                    {% csrf_token %}
+                    <div class="flex-column" style="width: 100%;">
+                        <div class="flex-row" style="justify-content: center; width: 100%;">
+                            <input type="text" id="username" name="username" placeholder="gebruikersnaam of email..." class="CHK2-text-input" value="{{ username }}" autocomplete="username">
                         </div>
                     </div>
 
-                    <form method="post" action="" style="width: 100%;">
-                        <input type="hidden" name="next" value="{{ request.GET.next }}">
-                        
-                        <div class="flex-column">
-                            <div class="flex-row" style="justify-content: center; width: 100%;">
-                                <input type="text" id="username" name="username" placeholder="Username or email..." class="CHK2-text-input" value="{{ username }}">
-                            </div>
+                    <div class="flex-column" style="width: 100%;">
+                        <div class="flex-row" style="justify-content: center; width: 100%;">
+                            <input type="password" id="password" name="password" placeholder="Wachtwoord..." class="CHK2-text-input" autocomplete="current-password">
                         </div>
-
-                        <div class="flex-column" style="width: 100%;">
-                            <div class="flex-row" style="justify-content: center; width: 100%;">
-                                <input type="password" id="password" name="password" placeholder="Password..." class="CHK2-text-input" >
+                        <div class="flex-row" style="width: 100%; justify-content: space-between;">
+                            <div class="flex-row" style="justify-content: flex-start; width: 156px;">
+                                <input type="checkbox" id="remember" name="remember" class="CHK2-checkbox" style="width: 16px; height: 16px; margin: 6px;" checked>
+                                <label for="remember" class="CHK2-P">Onthoud mij</label>
                             </div>
-                            <div class="flex-row" style="width: 100%; justify-content: space-between;">
-                                <div class="flex-row" style="justify-content: flex-start; width: 156px;">
-                                    <input type="checkbox" id="remember" name="remember" class="CHK2-checkbox" style="width: 16px; height: 16px; margin: 6px;" checked>
-                                    <label for="remember" class="CHK2-P">Remember me</label>
-                                </div>
-                                <a class="CHK2-P" style="color: var(--button-color); margin-right: 6px;" href="/password_reset/">Reset Password</a>
-                            </div>
+                            <a class="CHK2-P" style="color: var(--button-color); margin-right: 6px;" href="{% url 'password_reset' %}">wachtwoord herstellen</a>
                         </div>
+                    </div>
 
-                        <input type="submit" class="CHK2-button" name="Login" value="Login">
-                    </form>
+                    <input type="submit" class="CHK2-button" name="Login" value="Login">
+                </form>
 
-                    {% for message in messages %}
-                        <p class="CHK2-P">{{ message }}</p>
-                    {% endfor %}
+                {% for message in messages %}
+                    <p class="CHK2-P">{{ message }}</p>
+                {% endfor %}
 
-                    {{form.errors}}
-                    {% if error_message %}
-                        <p class="CHK2-P">{{ error_message|safe }}</p>
-                    {% endif %}
+                {{ form.errors }}
+                {% if error_message %}
+                    <div id="error-popup" class="popup text-font" style="font-size: 14px">
+                        <button aria-label="Close" class="close" onclick="closePopup()" style="font-size: 16px; background: none; border: none; cursor: pointer;">
+                            x
+                        </button>
+                        {{ error_message|safe }}
+                    </div>
+                {% endif %}
 
-                    <p class="CHK2-P">Don't have an account yet? <a href="{% url 'register'%}" style="color: var(--button-color); margin-left: 12px;">Sign Up</a></p>
-                    
-                </div>
+                <p class="CHK2-P">Heb je nog geen account? <a href="{% url 'register' %}" style="color: var(--button-color); margin-left: 12px;">Registreer hier</a></p>
             </div>
         </div>
+    </div>
 
-        {% include 'overlays/footer.html' %}
-        {% endif %}
-    </body>
+    {% include 'overlays/footer.html' %}
+
+    <script>
+        // Add JavaScript to show and hide the popup
+        function showPopup() {
+            const popup = document.getElementById('error-popup');
+            if (popup) {
+                popup.classList.add('show');
+            }
+        }
+
+        function closePopup() {
+            const popup = document.getElementById('error-popup');
+            if (popup) {
+                popup.classList.remove('show');
+            }
+        }
+
+        // Show the popup if there is an error message
+        document.addEventListener('DOMContentLoaded', () => {
+            const popup = document.getElementById('error-popup');
+            if (popup) {
+                showPopup();
+            }
+        });
+    </script>
+</body>
 </html>
