--- a/templates/teams/index.html
+++ b/templates/teams/index.html
@@ -66,7 +66,7 @@
             </div>
         </div>
 
-        <script src="{% static '/js/teams/index.js' %}"></script>
-        <script src="{% static '/js/programs/mobile_view.js' %}"></script>
+        <script src="/static/js/teams/index.js"></script>
+        <script src="/static/js/programs/mobile_view.js"></script>
     </body>
 </html>
