--- a/templates/matches/team_selector.html
+++ b/templates/matches/team_selector.html
@@ -38,7 +38,7 @@
             </div>
         </div>
 
-        <script src="{% static '/js/matches/tracker.js' %}"></script>
-        <script src="{% static '/js/programs/mobile_view.js' %}"></script>
+        <script src="/static/js/matches/tracker.js"></script>
+        <script src="/static/js/programs/mobile_view.js"></script>
     </body>
 </html>
