--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -69,7 +69,7 @@
             </script>
         {% endif %}
 
-        <script src="{% static '/js/profile/profile-detail.js' %}"></script>
-        <script src="{% static '/js/programs/mobile_view.js' %}"></script>
+        <script src="/static/js/profile/profile-detail.js"></script>
+        <script src="/static/js/programs/mobile_view.js"></script>
     </body>
 </html>
