--- a/templates/matches/detail.html
+++ b/templates/matches/detail.html
@@ -35,7 +35,7 @@
                         {% if match.finished %}
                             <p style="margin: 0; font-size: 16px; font-weight: 600;">Uitslag</p>
                         {% else %}
-                            {% if match.active %}
+                            {% if match.status == 'active' %}
                                 <p id="counter" style="margin: 0; font-size: 20px; font-weight: 600;">{{ time_display }}</p>
                             {% else %}
                                 <p id="counter" style="margin: 0; font-size: 20px; font-weight: 600;">{{ start_time }}</p>
@@ -57,7 +57,7 @@
                     <a class="button active" data="match_events">Events</a>
                     <a class="button" data="home_team">{{ match.home_team|truncate_middle:12 }}</a>
                     <a class="button" data="away_team">{{ match.away_team|truncate_middle:12 }}</a>
-                    {% if match.finished or match.active %}
+                    {% if match.status != 'upcomming' %}
                     <a class="button" data="get_stats">statastieken</a>
                     {% endif %}
                 </div>
