--- a/static_workfile/css/authentication/login_registration.css
+++ b/static_workfile/css/authentication/login_registration.css
@@ -35,9 +35,8 @@ body {
 
     display: inline-flex;
     flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
     justify-content: center;
+    box-sizing: border-box;
     text-align: center;
 
     padding-top: 2vh;
@@ -49,9 +48,8 @@ body {
 .CHK2-row {
     display: inline-flex;
     flex-direction: row;
-    justify-content: space-between;
-    box-sizing: border-box;
     justify-content: center;
+    box-sizing: border-box;
 
     margin-top: 2vh;
 }
@@ -101,7 +99,6 @@ body {
     margin-right: 2vw;
 
     margin-top: 1vw;
-    margin-bottom: 0.7vw;
 }
 
 .CHK2-img {
@@ -209,8 +206,6 @@ body {
     display: inline-block;
 
     font-size: 16px;
-    
-    cursor: pointer;
 
     width: 100%;
     height: 48px;
@@ -233,16 +228,32 @@ body {
     color: black;
 }
 
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+.popup {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #f44336;
+    color: white;
+    padding: 16px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
 }
 
-.flex-column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+.popup.show {
+    display: block;
+}
+
+.popup .close {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.class {
+    font-size: 16px;
 }
