# Reliability changes and code cleanup

--- a/templates/authentication/registration/password_reset_done.html
+++ b/templates/authentication/registration/password_reset_done.html
@@ -21,7 +21,7 @@
         {% include 'overlays/navbar.html' %}
 
         <div class="flex-column" style="margin-top: 64px; height: 80vh">
-            <h2 class="text-font" style="text-weight: 600; font-size: 24px;">Password Reset Email Sent</h2>
+            <h2 class="text-font" style="font-weight: 600; font-size: 24px;">Password Reset Email Sent</h2>
             <p class="text-font">We have sent you an email with instructions on how to reset your password.</p>
         </div>
     </body>
