--- a/templates/authentication/registration/password_reset_form.html
+++ b/templates/authentication/registration/password_reset_form.html
@@ -21,7 +21,7 @@
         {% include 'overlays/navbar.html' %}
 
         <div class="flex-column" style="margin-top: 64px; height: 80vh">
-            <h2 class="text-font" style="text-weight: 600; font-size: 24px;">Password Reset</h2>
+            <h2 class="text-font" style="font-weight: 600; font-size: 24px;">Password Reset</h2>
             <form class="form-container" method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
