--- a/templates/club/detail.html
+++ b/templates/club/detail.html
@@ -48,6 +48,7 @@
 
         <p style="display: none;" id="user_id">{{ request.user.id }}</p>
 
+        <script src="/static/js/common/common.js"></script>
         <script src="/static/js/clubs/detail.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
