--- a/templates/matches/detail.html
+++ b/templates/matches/detail.html
@@ -69,6 +69,7 @@
 
         <p style="display: none;" id="user_id">{{ request.user.id }}</p>
 
+        <script src="/static/js/common/common.js"></script>
         <script src="/static/js/matches/detail.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
