--- a/templates/club/detail.html
+++ b/templates/club/detail.html
@@ -49,6 +49,7 @@
         <p style="display: none;" id="user_id">{{ request.user.id }}</p>
 
         <script src="/static/js/common/common.js"></script>
+        <script src="/static/js/common/truncateMiddle.js"></script>
         <script src="/static/js/common/updateMatches.js"></script>
         <script src="/static/js/common/updateTeam.js"></script>
         <script src="/static/js/clubs/detail.js"></script>
