--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -72,6 +72,7 @@
         {% csrf_token %}
 
         <script src="/static/js/common/common.js"></script>
+        <script src="/static/js/common/truncateMiddle.js"></script>
         <script src="/static/js/common/updateMatches.js"></script>
         <script src="/static/js/common/updateTeam.js"></script>
         <script src="/static/js/profile/profile-detail.js"></script>
