--- a/templates/matches/tracker.html
+++ b/templates/matches/tracker.html
@@ -61,6 +61,11 @@
             <div>
         </div>
 
+        <script src="/static/js/common/truncateMiddle.js"></script>
+        <script src="/static/js/matches/countdownTimer.js"></script>
+        <script src="/static/js/matches/onPlayerSelectChange.js"></script>
+        <script src="/static/js/matches/savePlayerGroups.js"></script>
+        <script src="/static/js/matches/updateplayerGroups.js"></script>
         <script src="/static/js/matches/tracker.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
