--- a/templates/teams/detail.html
+++ b/templates/teams/detail.html
@@ -38,7 +38,7 @@
                 <div class="carousel">
                     <a class="button active" data="wedstrijden">Programma</a>
                     <a class="button" data="ended_matches">Uitslagen</a>
-                    <a class="button" data="team_stats">Team stats</a>
+                    <a class="button" data="get_stats">Team stats</a>
                     <a class="button" data="spelers">Spelers</a>
                 </div>
             </div>
@@ -53,6 +53,7 @@
         <script src="/static/js/common/truncateMiddle.js"></script>
         <script src="/static/js/common/updateMatches.js"></script>
         <script src="/static/js/common/updateStatastics.js"></script>
+        <script src="/static/js/common/setup_follow_button.js"></script>
         <script src="/static/js/teams/detail.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
