--- a/templates/club/detail.html
+++ b/templates/club/detail.html
@@ -52,6 +52,7 @@
         <script src="/static/js/common/truncateMiddle.js"></script>
         <script src="/static/js/common/updateMatches.js"></script>
         <script src="/static/js/common/updateTeam.js"></script>
+        <script src="/static/js/common/setup_follow_button.js"></script>
         <script src="/static/js/clubs/detail.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
