--- a/templates/matches/tracker.html
+++ b/templates/matches/tracker.html
@@ -30,7 +30,7 @@
                     <p id="counter" style="font-size: 16px; font-weight: 600; margin: 0;">{{ time_display }}</p>
                 </div>
                 <div style="width: calc(100% * 1/3)" class="flex-column">
-                    <button id="start-stop-button" class="switch-button">Start/Stop</button>
+                    <button id="start-stop-button" class="switch-button">{{ start_stop_button }}</button>
                 </div>
             </div>
 
